--- a/Roblox.Beta.html
+++ b/Roblox.Beta.html
@@ -18,7 +18,8 @@
 
     <meta id="RobotsMeta" name='robots' content='noindex, nofollow' />
 
-
+Github-TryerTester-Supported
+  Liunx-Windows-Mac
 <script type="application/ld+json">
     {
     "@context" : "http://schema.org",
